export const snapshot = {};

snapshot[`generateCloudflareExtensionModel - account-scoped, all handlers 1`] = `
'// Swamp, an Automation Framework
// Copyright (C) 2026 Elder Swamp Club, Inc.
//
// This file is part of Swamp.
//
// Swamp is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License version 3
// as published by the Free Software Foundation, with the Swamp
// Extension and Definition Exception (found in the "COPYING-EXCEPTION"
// file).
//
// Swamp is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with Swamp.  If not, see <https://www.gnu.org/licenses/>.

// Auto-generated extension model for @swamp/cloudflare/d1/database
// Do not edit manually. Re-generate with: deno task generate:cloudflare

// deno-lint-ignore-file no-explicit-any

/**
 * Swamp extension model for a Cloudflare Database.
 *
 * Wraps the Cloudflare API as a swamp model so create, get, lookup,
 * adopt, update, delete, and sync can be driven through \`swamp model\`.
 *
 * @module
 */

import { z } from "npm:zod@4.3.6";
import { create, listAll, read, tryRead, remove } from "./_lib/cloudflare.ts";

const GlobalArgsSchema = z.object({
  account_id: z.string().describe("Cloudflare account ID"),
  name: z.string().describe("Database name").optional(),
  primary_location_hint: z.enum(["wnam", "enam", "weur", "eeur", "apac"]).describe("Location hint").optional(),
  apiToken: z.string().meta({ sensitive: true }).describe("Cloudflare API token; overrides the CLOUDFLARE_API_TOKEN environment variable. Wire with a vault.get(...) expression to source it from a vault.").optional(),
  apiKey: z.string().meta({ sensitive: true }).describe("Cloudflare API key for the legacy key+email auth path; overrides the CLOUDFLARE_API_KEY environment variable. Wire with a vault.get(...) expression. Requires email.").optional(),
  email: z.string().meta({ sensitive: true }).describe("Cloudflare account email for the legacy key+email auth path; overrides the CLOUDFLARE_EMAIL environment variable. Requires apiKey.").optional(),
});

const ResourceSchema = z.object({
  id: z.string(),
  name: z.string().optional(),
  version: z.string().optional(),
  num_tables: z.number().optional(),
  file_size: z.number().optional(),
}).passthrough();

type ResourceData = z.infer<typeof ResourceSchema>;

const InputsSchema = z.object({
  account_id: z.string().optional(),
  name: z.string().optional(),
  primary_location_hint: z.enum(["wnam", "enam", "weur", "eeur", "apac"]).optional(),
  apiToken: z.string().meta({ sensitive: true }).optional(),
  apiKey: z.string().meta({ sensitive: true }).optional(),
  email: z.string().meta({ sensitive: true }).optional(),
});

/** Swamp extension model for Cloudflare Database. Registered at \`@swamp/cloudflare/d1/database\`. */
export const model = {
  type: "@swamp/cloudflare/d1/database",
  version: "2026.01.01.1",
  globalArguments: GlobalArgsSchema,
  inputsSchema: InputsSchema,
  resources: {
    state: {
      description: "Database resource state",
      schema: ResourceSchema,
      lifetime: "infinite",
      garbageCollection: 10,
    },
  },
  methods: {
    create: {
      description: "Create a Database",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const missing = ["name"].filter((k) => g[k] === undefined);
        if (missing.length > 0) throw new Error("create requires global arguments: " + missing.join(", "));
        const endpoint = "/accounts/" + g.account_id + "/d1/database";
        const body: Record<string, unknown> = {};
        if (g.name !== undefined) body.name = g.name;
        if (g.primary_location_hint !== undefined) body.primary_location_hint = g.primary_location_hint;
        const result = await create(endpoint, body, { apiToken: g.apiToken, apiKey: g.apiKey, email: g.email }) as ResourceData;
        const instanceName = (g.name?.toString() ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    get: {
      description: "Get a Database",
      arguments: z.object({ id: z.string().describe("The ID of the Database") }),
      execute: async (args: { id: string }, context: any) => {
        const g = context.globalArgs;
        const endpoint = "/accounts/" + g.account_id + "/d1/database";
        const result = await read(endpoint, args.id, { apiToken: g.apiToken, apiKey: g.apiKey, email: g.email }) as ResourceData;
        const instanceName = (g.name?.toString() ?? args.id).replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    lookup: {
      description: "Look up an existing Database by matching global argument values and import it into state",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const endpoint = "/accounts/" + g.account_id + "/d1/database";
        const filters: [string, string][] = [];
        if (g.name !== undefined) filters.push(["name", String(g.name)]);
        if (g.primary_location_hint !== undefined) filters.push(["primary_location_hint", String(g.primary_location_hint)]);
        if (filters.length === 0) throw new Error("At least one global argument must be set to filter by");
        const items = await listAll(endpoint, "page", undefined, { apiToken: g.apiToken, apiKey: g.apiKey, email: g.email });
        const matches = items.filter(item => {
          for (const [key, val] of filters) {
            if (String((item as Record<string, unknown>)[key]) !== val) return false;
          }
          return true;
        });
        if (matches.length === 0) {
          const filterDesc = filters.map(([k, v]) => \`\${k}=\${JSON.stringify(v)}\`).join(", ");
          throw new Error(\`No database found matching filters: \${filterDesc}\`);
        }
        if (matches.length > 1) {
          const filterDesc = filters.map(([k, v]) => \`\${k}=\${JSON.stringify(v)}\`).join(", ");
          throw new Error(\`Expected exactly 1 match, found \${matches.length} for filters: \${filterDesc}\`);
        }
        const result = matches[0] as ResourceData;
        const instanceName = (g.name?.toString() ?? result.id?.toString() ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    adopt: {
      description: "Import an existing Database by ID into state for management",
      arguments: z.object({ id: z.string().describe("The ID of the Database to import") }),
      execute: async (args: { id: string }, context: any) => {
        const g = context.globalArgs;
        const endpoint = "/accounts/" + g.account_id + "/d1/database";
        const result = await read(endpoint, args.id, { apiToken: g.apiToken, apiKey: g.apiKey, email: g.email }) as ResourceData;
        const instanceName = (result.name?.toString() ?? g.name?.toString() ?? args.id).replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    delete: {
      description: "Delete the Database",
      arguments: z.object({ id: z.string().describe("The ID of the Database") }),
      execute: async (args: { id: string }, context: any) => {
        const g = context.globalArgs;
        const endpoint = "/accounts/" + g.account_id + "/d1/database";
        const { existed } = await remove(endpoint, args.id, { apiToken: g.apiToken, apiKey: g.apiKey, email: g.email });
        const instanceName = (context.globalArgs.name?.toString() ?? args.id).replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, {
          id: args.id,
          existed,
          status: existed ? "deleted" : "not_found",
          deletedAt: new Date().toISOString(),
        });
        return { dataHandles: [handle] };
      },
    },
    sync: {
      description: "Sync Database state from Cloudflare",
      arguments: z.object({ identifier: z.string().describe("Target a specific Database by id (e.g. one discovered by list)").optional() }),
      execute: async (args: { identifier?: string }, context: any) => {
        const g = context.globalArgs;
        const endpoint = "/accounts/" + g.account_id + "/d1/database";
        const instanceName = (g.name?.toString() ?? args.identifier ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const content = await context.dataRepository.getContent(
          context.modelType, context.modelId, instanceName,
        );
        if (!content) throw new Error("No data found - run create, get, or list first");
        const existing = JSON.parse(new TextDecoder().decode(content));
        if (!existing.id) throw new Error("Stored state has no id - cannot sync");
        const result = await tryRead(endpoint, existing.id, { apiToken: g.apiToken, apiKey: g.apiKey, email: g.email }) as ResourceData | null;
        if (result) {
          const handle = await context.writeResource("state", instanceName, result);
          return { dataHandles: [handle] };
        }
        const handle = await context.writeResource("state", instanceName, {
          id: existing.id,
          status: "not_found",
          syncedAt: new Date().toISOString(),
        });
        return { dataHandles: [handle] };
      },
    },
  },
};
'
`;

snapshot[`generateCloudflareExtensionModel - zone-scoped, PATCH update 1`] = `
'// Swamp, an Automation Framework
// Copyright (C) 2026 Elder Swamp Club, Inc.
//
// This file is part of Swamp.
//
// Swamp is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License version 3
// as published by the Free Software Foundation, with the Swamp
// Extension and Definition Exception (found in the "COPYING-EXCEPTION"
// file).
//
// Swamp is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with Swamp.  If not, see <https://www.gnu.org/licenses/>.

// Auto-generated extension model for @swamp/cloudflare/dns/dns-records
// Do not edit manually. Re-generate with: deno task generate:cloudflare

// deno-lint-ignore-file no-explicit-any

/**
 * Swamp extension model for a Cloudflare DNS Record.
 *
 * Wraps the Cloudflare API as a swamp model so create, get, lookup,
 * adopt, update, delete, and sync can be driven through \`swamp model\`.
 *
 * @module
 */

import { z } from "npm:zod@4.3.6";
import { create, listAll, read, tryRead, remove, update } from "./_lib/cloudflare.ts";

const GlobalArgsSchema = z.object({
  zone_id: z.string().describe("Cloudflare zone ID"),
  name: z.string().min(1).max(255).describe("Record name").optional(),
  content: z.string().describe("Record content").optional(),
  ttl: z.number().int().min(30).max(86400).describe("TTL").optional(),
  proxied: z.boolean().describe("Cloudflare proxy").optional(),
  type: z.enum(["A", "AAAA", "CNAME", "MX", "TXT"]).describe("Record type").optional(),
  apiToken: z.string().meta({ sensitive: true }).describe("Cloudflare API token; overrides the CLOUDFLARE_API_TOKEN environment variable. Wire with a vault.get(...) expression to source it from a vault.").optional(),
  apiKey: z.string().meta({ sensitive: true }).describe("Cloudflare API key for the legacy key+email auth path; overrides the CLOUDFLARE_API_KEY environment variable. Wire with a vault.get(...) expression. Requires email.").optional(),
  email: z.string().meta({ sensitive: true }).describe("Cloudflare account email for the legacy key+email auth path; overrides the CLOUDFLARE_EMAIL environment variable. Requires apiKey.").optional(),
});

const ResourceSchema = z.object({
  id: z.string(),
  name: z.string().optional(),
  type: z.string().optional(),
  content: z.string().optional(),
  ttl: z.number().optional(),
  proxied: z.boolean().optional(),
}).passthrough();

type ResourceData = z.infer<typeof ResourceSchema>;

const InputsSchema = z.object({
  zone_id: z.string().optional(),
  name: z.string().min(1).max(255).optional(),
  content: z.string().optional(),
  ttl: z.number().int().min(30).max(86400).optional(),
  proxied: z.boolean().optional(),
  type: z.enum(["A", "AAAA", "CNAME", "MX", "TXT"]).optional(),
  apiToken: z.string().meta({ sensitive: true }).optional(),
  apiKey: z.string().meta({ sensitive: true }).optional(),
  email: z.string().meta({ sensitive: true }).optional(),
});

/** Swamp extension model for Cloudflare DNS Record. Registered at \`@swamp/cloudflare/dns/dns-records\`. */
export const model = {
  type: "@swamp/cloudflare/dns/dns-records",
  version: "2026.01.01.1",
  globalArguments: GlobalArgsSchema,
  inputsSchema: InputsSchema,
  resources: {
    state: {
      description: "DNS Record resource state",
      schema: ResourceSchema,
      lifetime: "infinite",
      garbageCollection: 10,
    },
  },
  methods: {
    create: {
      description: "Create a DNS Record",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const missing = ["content","name","type"].filter((k) => g[k] === undefined);
        if (missing.length > 0) throw new Error("create requires global arguments: " + missing.join(", "));
        const endpoint = "/zones/" + g.zone_id + "/dns_records";
        const body: Record<string, unknown> = {};
        if (g.name !== undefined) body.name = g.name;
        if (g.type !== undefined) body.type = g.type;
        if (g.content !== undefined) body.content = g.content;
        if (g.ttl !== undefined) body.ttl = g.ttl;
        if (g.proxied !== undefined) body.proxied = g.proxied;
        const result = await create(endpoint, body, { apiToken: g.apiToken, apiKey: g.apiKey, email: g.email }) as ResourceData;
        const instanceName = (g.name?.toString() ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    get: {
      description: "Get a DNS Record",
      arguments: z.object({ id: z.string().describe("The ID of the DNS Record") }),
      execute: async (args: { id: string }, context: any) => {
        const g = context.globalArgs;
        const endpoint = "/zones/" + g.zone_id + "/dns_records";
        const result = await read(endpoint, args.id, { apiToken: g.apiToken, apiKey: g.apiKey, email: g.email }) as ResourceData;
        const instanceName = (g.name?.toString() ?? args.id).replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    lookup: {
      description: "Look up an existing DNS Record by matching global argument values and import it into state",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const endpoint = "/zones/" + g.zone_id + "/dns_records";
        const filters: [string, string][] = [];
        if (g.name !== undefined) filters.push(["name", String(g.name)]);
        if (g.content !== undefined) filters.push(["content", String(g.content)]);
        if (g.ttl !== undefined) filters.push(["ttl", String(g.ttl)]);
        if (g.proxied !== undefined) filters.push(["proxied", String(g.proxied)]);
        if (g.type !== undefined) filters.push(["type", String(g.type)]);
        if (filters.length === 0) throw new Error("At least one global argument must be set to filter by");
        const items = await listAll(endpoint, "page", undefined, { apiToken: g.apiToken, apiKey: g.apiKey, email: g.email });
        const matches = items.filter(item => {
          for (const [key, val] of filters) {
            if (String((item as Record<string, unknown>)[key]) !== val) return false;
          }
          return true;
        });
        if (matches.length === 0) {
          const filterDesc = filters.map(([k, v]) => \`\${k}=\${JSON.stringify(v)}\`).join(", ");
          throw new Error(\`No dns record found matching filters: \${filterDesc}\`);
        }
        if (matches.length > 1) {
          const filterDesc = filters.map(([k, v]) => \`\${k}=\${JSON.stringify(v)}\`).join(", ");
          throw new Error(\`Expected exactly 1 match, found \${matches.length} for filters: \${filterDesc}\`);
        }
        const result = matches[0] as ResourceData;
        const instanceName = (g.name?.toString() ?? result.id?.toString() ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    adopt: {
      description: "Import an existing DNS Record by ID into state for management",
      arguments: z.object({ id: z.string().describe("The ID of the DNS Record to import") }),
      execute: async (args: { id: string }, context: any) => {
        const g = context.globalArgs;
        const endpoint = "/zones/" + g.zone_id + "/dns_records";
        const result = await read(endpoint, args.id, { apiToken: g.apiToken, apiKey: g.apiKey, email: g.email }) as ResourceData;
        const instanceName = (result.name?.toString() ?? g.name?.toString() ?? args.id).replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    update: {
      description: "Update DNS Record attributes",
      arguments: z.object({ identifier: z.string().describe("Target a specific DNS Record by id (e.g. one discovered by list)").optional() }),
      execute: async (args: { identifier?: string }, context: any) => {
        const g = context.globalArgs;
        const endpoint = "/zones/" + g.zone_id + "/dns_records";
        const instanceName = (g.name?.toString() ?? args.identifier ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const content = await context.dataRepository.getContent(
          context.modelType, context.modelId, instanceName,
        );
        if (!content) throw new Error("No data found - run create, get, or list first");
        const existing = JSON.parse(new TextDecoder().decode(content));
        const body: Record<string, unknown> = {};
        if (g.name !== undefined) body.name = g.name;
        if (g.content !== undefined) body.content = g.content;
        if (g.ttl !== undefined) body.ttl = g.ttl;
        if (g.proxied !== undefined) body.proxied = g.proxied;
        const result = await update(endpoint, existing.id, body, "PATCH", { apiToken: g.apiToken, apiKey: g.apiKey, email: g.email }) as ResourceData;
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    delete: {
      description: "Delete the DNS Record",
      arguments: z.object({ id: z.string().describe("The ID of the DNS Record") }),
      execute: async (args: { id: string }, context: any) => {
        const g = context.globalArgs;
        const endpoint = "/zones/" + g.zone_id + "/dns_records";
        const { existed } = await remove(endpoint, args.id, { apiToken: g.apiToken, apiKey: g.apiKey, email: g.email });
        const instanceName = (context.globalArgs.name?.toString() ?? args.id).replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, {
          id: args.id,
          existed,
          status: existed ? "deleted" : "not_found",
          deletedAt: new Date().toISOString(),
        });
        return { dataHandles: [handle] };
      },
    },
    sync: {
      description: "Sync DNS Record state from Cloudflare",
      arguments: z.object({ identifier: z.string().describe("Target a specific DNS Record by id (e.g. one discovered by list)").optional() }),
      execute: async (args: { identifier?: string }, context: any) => {
        const g = context.globalArgs;
        const endpoint = "/zones/" + g.zone_id + "/dns_records";
        const instanceName = (g.name?.toString() ?? args.identifier ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const content = await context.dataRepository.getContent(
          context.modelType, context.modelId, instanceName,
        );
        if (!content) throw new Error("No data found - run create, get, or list first");
        const existing = JSON.parse(new TextDecoder().decode(content));
        if (!existing.id) throw new Error("Stored state has no id - cannot sync");
        const result = await tryRead(endpoint, existing.id, { apiToken: g.apiToken, apiKey: g.apiKey, email: g.email }) as ResourceData | null;
        if (result) {
          const handle = await context.writeResource("state", instanceName, result);
          return { dataHandles: [handle] };
        }
        const handle = await context.writeResource("state", instanceName, {
          id: existing.id,
          status: "not_found",
          syncedAt: new Date().toISOString(),
        });
        return { dataHandles: [handle] };
      },
    },
  },
};
'
`;

snapshot[`generateCloudflareExtensionModel - dual-scoped resource 1`] = `
'// Swamp, an Automation Framework
// Copyright (C) 2026 Elder Swamp Club, Inc.
//
// This file is part of Swamp.
//
// Swamp is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License version 3
// as published by the Free Software Foundation, with the Swamp
// Extension and Definition Exception (found in the "COPYING-EXCEPTION"
// file).
//
// Swamp is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with Swamp.  If not, see <https://www.gnu.org/licenses/>.

// Auto-generated extension model for @swamp/cloudflare/rulesets/rulesets
// Do not edit manually. Re-generate with: deno task generate:cloudflare

// deno-lint-ignore-file no-explicit-any

/**
 * Swamp extension model for a Cloudflare Ruleset.
 *
 * Wraps the Cloudflare API as a swamp model so create, get, lookup,
 * adopt, update, delete, and sync can be driven through \`swamp model\`.
 *
 * @module
 */

import { z } from "npm:zod@4.3.6";
import { create, listAll, read, tryRead, remove, update } from "./_lib/cloudflare.ts";

const GlobalArgsSchema = z.object({
  account_id: z.string().optional().describe("Cloudflare account ID (provide account_id or zone_id)"),
  zone_id: z.string().optional().describe("Cloudflare zone ID (provide account_id or zone_id)"),
  name: z.string().describe("Ruleset name").optional(),
  kind: z.enum(["root", "zone", "managed"]).describe("Kind").optional(),
  phase: z.string().describe("Phase").optional(),
  apiToken: z.string().meta({ sensitive: true }).describe("Cloudflare API token; overrides the CLOUDFLARE_API_TOKEN environment variable. Wire with a vault.get(...) expression to source it from a vault.").optional(),
  apiKey: z.string().meta({ sensitive: true }).describe("Cloudflare API key for the legacy key+email auth path; overrides the CLOUDFLARE_API_KEY environment variable. Wire with a vault.get(...) expression. Requires email.").optional(),
  email: z.string().meta({ sensitive: true }).describe("Cloudflare account email for the legacy key+email auth path; overrides the CLOUDFLARE_EMAIL environment variable. Requires apiKey.").optional(),
});

const ResourceSchema = z.object({
  id: z.string(),
  name: z.string().optional(),
  kind: z.string().optional(),
  phase: z.string().optional(),
  version: z.string().optional(),
}).passthrough();

type ResourceData = z.infer<typeof ResourceSchema>;

const InputsSchema = z.object({
  account_id: z.string().optional(),
  zone_id: z.string().optional(),
  name: z.string().optional(),
  kind: z.enum(["root", "zone", "managed"]).optional(),
  phase: z.string().optional(),
  apiToken: z.string().meta({ sensitive: true }).optional(),
  apiKey: z.string().meta({ sensitive: true }).optional(),
  email: z.string().meta({ sensitive: true }).optional(),
});

/** Swamp extension model for Cloudflare Ruleset. Registered at \`@swamp/cloudflare/rulesets/rulesets\`. */
export const model = {
  type: "@swamp/cloudflare/rulesets/rulesets",
  version: "2026.01.01.1",
  globalArguments: GlobalArgsSchema,
  inputsSchema: InputsSchema,
  resources: {
    state: {
      description: "Ruleset resource state",
      schema: ResourceSchema,
      lifetime: "infinite",
      garbageCollection: 10,
    },
  },
  methods: {
    create: {
      description: "Create a Ruleset",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const missing = ["kind","name","phase"].filter((k) => g[k] === undefined);
        if (missing.length > 0) throw new Error("create requires global arguments: " + missing.join(", "));
        if ((g.account_id == null) === (g.zone_id == null)) throw new Error("Exactly one of account_id or zone_id must be provided");
        const scopePrefix = g.account_id ? "/accounts/" + g.account_id : "/zones/" + g.zone_id;
        const endpoint = scopePrefix + "/rulesets";
        const body: Record<string, unknown> = {};
        if (g.name !== undefined) body.name = g.name;
        if (g.kind !== undefined) body.kind = g.kind;
        if (g.phase !== undefined) body.phase = g.phase;
        const result = await create(endpoint, body, { apiToken: g.apiToken, apiKey: g.apiKey, email: g.email }) as ResourceData;
        const instanceName = (g.name?.toString() ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    get: {
      description: "Get a Ruleset",
      arguments: z.object({ id: z.string().describe("The ID of the Ruleset") }),
      execute: async (args: { id: string }, context: any) => {
        const g = context.globalArgs;
        if ((g.account_id == null) === (g.zone_id == null)) throw new Error("Exactly one of account_id or zone_id must be provided");
        const scopePrefix = g.account_id ? "/accounts/" + g.account_id : "/zones/" + g.zone_id;
        const endpoint = scopePrefix + "/rulesets";
        const result = await read(endpoint, args.id, { apiToken: g.apiToken, apiKey: g.apiKey, email: g.email }) as ResourceData;
        const instanceName = (g.name?.toString() ?? args.id).replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    lookup: {
      description: "Look up an existing Ruleset by matching global argument values and import it into state",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        if ((g.account_id == null) === (g.zone_id == null)) throw new Error("Exactly one of account_id or zone_id must be provided");
        const scopePrefix = g.account_id ? "/accounts/" + g.account_id : "/zones/" + g.zone_id;
        const endpoint = scopePrefix + "/rulesets";
        const filters: [string, string][] = [];
        if (g.name !== undefined) filters.push(["name", String(g.name)]);
        if (g.kind !== undefined) filters.push(["kind", String(g.kind)]);
        if (g.phase !== undefined) filters.push(["phase", String(g.phase)]);
        if (filters.length === 0) throw new Error("At least one global argument must be set to filter by");
        const items = await listAll(endpoint, "page", undefined, { apiToken: g.apiToken, apiKey: g.apiKey, email: g.email });
        const matches = items.filter(item => {
          for (const [key, val] of filters) {
            if (String((item as Record<string, unknown>)[key]) !== val) return false;
          }
          return true;
        });
        if (matches.length === 0) {
          const filterDesc = filters.map(([k, v]) => \`\${k}=\${JSON.stringify(v)}\`).join(", ");
          throw new Error(\`No ruleset found matching filters: \${filterDesc}\`);
        }
        if (matches.length > 1) {
          const filterDesc = filters.map(([k, v]) => \`\${k}=\${JSON.stringify(v)}\`).join(", ");
          throw new Error(\`Expected exactly 1 match, found \${matches.length} for filters: \${filterDesc}\`);
        }
        const result = matches[0] as ResourceData;
        const instanceName = (g.name?.toString() ?? result.id?.toString() ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    adopt: {
      description: "Import an existing Ruleset by ID into state for management",
      arguments: z.object({ id: z.string().describe("The ID of the Ruleset to import") }),
      execute: async (args: { id: string }, context: any) => {
        const g = context.globalArgs;
        if ((g.account_id == null) === (g.zone_id == null)) throw new Error("Exactly one of account_id or zone_id must be provided");
        const scopePrefix = g.account_id ? "/accounts/" + g.account_id : "/zones/" + g.zone_id;
        const endpoint = scopePrefix + "/rulesets";
        const result = await read(endpoint, args.id, { apiToken: g.apiToken, apiKey: g.apiKey, email: g.email }) as ResourceData;
        const instanceName = (result.name?.toString() ?? g.name?.toString() ?? args.id).replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    update: {
      description: "Update Ruleset attributes",
      arguments: z.object({ identifier: z.string().describe("Target a specific Ruleset by id (e.g. one discovered by list)").optional() }),
      execute: async (args: { identifier?: string }, context: any) => {
        const g = context.globalArgs;
        if ((g.account_id == null) === (g.zone_id == null)) throw new Error("Exactly one of account_id or zone_id must be provided");
        const scopePrefix = g.account_id ? "/accounts/" + g.account_id : "/zones/" + g.zone_id;
        const endpoint = scopePrefix + "/rulesets";
        const instanceName = (g.name?.toString() ?? args.identifier ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const content = await context.dataRepository.getContent(
          context.modelType, context.modelId, instanceName,
        );
        if (!content) throw new Error("No data found - run create, get, or list first");
        const existing = JSON.parse(new TextDecoder().decode(content));
        const body: Record<string, unknown> = {};
        if (g.name !== undefined) body.name = g.name;
        const unset = ["name"].filter((k) => body[k] === undefined);
        if (unset.length > 0) {
          const live = await read(endpoint, existing.id, { apiToken: g.apiToken, apiKey: g.apiKey, email: g.email });
          for (const k of unset) if (live[k] !== undefined) body[k] = live[k];
        }
        const missingForUpdate = ["name"].filter((k) => body[k] === undefined);
        if (missingForUpdate.length > 0) throw new Error("update requires global arguments: " + missingForUpdate.join(", "));
        const result = await update(endpoint, existing.id, body, "PUT", { apiToken: g.apiToken, apiKey: g.apiKey, email: g.email }) as ResourceData;
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    delete: {
      description: "Delete the Ruleset",
      arguments: z.object({ id: z.string().describe("The ID of the Ruleset") }),
      execute: async (args: { id: string }, context: any) => {
        const g = context.globalArgs;
        if ((g.account_id == null) === (g.zone_id == null)) throw new Error("Exactly one of account_id or zone_id must be provided");
        const scopePrefix = g.account_id ? "/accounts/" + g.account_id : "/zones/" + g.zone_id;
        const endpoint = scopePrefix + "/rulesets";
        const { existed } = await remove(endpoint, args.id, { apiToken: g.apiToken, apiKey: g.apiKey, email: g.email });
        const instanceName = (context.globalArgs.name?.toString() ?? args.id).replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, {
          id: args.id,
          existed,
          status: existed ? "deleted" : "not_found",
          deletedAt: new Date().toISOString(),
        });
        return { dataHandles: [handle] };
      },
    },
    sync: {
      description: "Sync Ruleset state from Cloudflare",
      arguments: z.object({ identifier: z.string().describe("Target a specific Ruleset by id (e.g. one discovered by list)").optional() }),
      execute: async (args: { identifier?: string }, context: any) => {
        const g = context.globalArgs;
        if ((g.account_id == null) === (g.zone_id == null)) throw new Error("Exactly one of account_id or zone_id must be provided");
        const scopePrefix = g.account_id ? "/accounts/" + g.account_id : "/zones/" + g.zone_id;
        const endpoint = scopePrefix + "/rulesets";
        const instanceName = (g.name?.toString() ?? args.identifier ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const content = await context.dataRepository.getContent(
          context.modelType, context.modelId, instanceName,
        );
        if (!content) throw new Error("No data found - run create, get, or list first");
        const existing = JSON.parse(new TextDecoder().decode(content));
        if (!existing.id) throw new Error("Stored state has no id - cannot sync");
        const result = await tryRead(endpoint, existing.id, { apiToken: g.apiToken, apiKey: g.apiKey, email: g.email }) as ResourceData | null;
        if (result) {
          const handle = await context.writeResource("state", instanceName, result);
          return { dataHandles: [handle] };
        }
        const handle = await context.writeResource("state", instanceName, {
          id: existing.id,
          status: "not_found",
          syncedAt: new Date().toISOString(),
        });
        return { dataHandles: [handle] };
      },
    },
  },
};
'
`;

snapshot[`generateCloudflareExtensionModel - synthetic name 1`] = `
'// Swamp, an Automation Framework
// Copyright (C) 2026 Elder Swamp Club, Inc.
//
// This file is part of Swamp.
//
// Swamp is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License version 3
// as published by the Free Software Foundation, with the Swamp
// Extension and Definition Exception (found in the "COPYING-EXCEPTION"
// file).
//
// Swamp is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with Swamp.  If not, see <https://www.gnu.org/licenses/>.

// Auto-generated extension model for @swamp/cloudflare/addressing/address-maps
// Do not edit manually. Re-generate with: deno task generate:cloudflare

// deno-lint-ignore-file no-explicit-any

/**
 * Swamp extension model for a Cloudflare Address Map.
 *
 * Wraps the Cloudflare API as a swamp model so create, get, lookup,
 * adopt, update, delete, and sync can be driven through \`swamp model\`.
 *
 * @module
 */

import { z } from "npm:zod@4.3.6";
import { create, listAll, read, tryRead, remove, update } from "./_lib/cloudflare.ts";

const GlobalArgsSchema = z.object({
  account_id: z.string().describe("Cloudflare account ID"),
  name: z.string().describe("Instance name for this resource (used as the unique identifier in the factory pattern)"),
  enabled: z.boolean().describe("Whether the address map is enabled").optional(),
  apiToken: z.string().meta({ sensitive: true }).describe("Cloudflare API token; overrides the CLOUDFLARE_API_TOKEN environment variable. Wire with a vault.get(...) expression to source it from a vault.").optional(),
  apiKey: z.string().meta({ sensitive: true }).describe("Cloudflare API key for the legacy key+email auth path; overrides the CLOUDFLARE_API_KEY environment variable. Wire with a vault.get(...) expression. Requires email.").optional(),
  email: z.string().meta({ sensitive: true }).describe("Cloudflare account email for the legacy key+email auth path; overrides the CLOUDFLARE_EMAIL environment variable. Requires apiKey.").optional(),
});

const ResourceSchema = z.object({
  id: z.string(),
  enabled: z.boolean().optional(),
  created_at: z.string().optional(),
}).passthrough();

type ResourceData = z.infer<typeof ResourceSchema>;

const InputsSchema = z.object({
  account_id: z.string().optional(),
  name: z.string().optional(),
  enabled: z.boolean().optional(),
  apiToken: z.string().meta({ sensitive: true }).optional(),
  apiKey: z.string().meta({ sensitive: true }).optional(),
  email: z.string().meta({ sensitive: true }).optional(),
});

/** Swamp extension model for Cloudflare Address Map. Registered at \`@swamp/cloudflare/addressing/address-maps\`. */
export const model = {
  type: "@swamp/cloudflare/addressing/address-maps",
  version: "2026.01.01.1",
  globalArguments: GlobalArgsSchema,
  inputsSchema: InputsSchema,
  resources: {
    state: {
      description: "Address Map resource state",
      schema: ResourceSchema,
      lifetime: "infinite",
      garbageCollection: 10,
    },
  },
  methods: {
    create: {
      description: "Create a Address Map",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const endpoint = "/accounts/" + g.account_id + "/addressing/address_maps";
        const body: Record<string, unknown> = {};
        if (g.enabled !== undefined) body.enabled = g.enabled;
        const result = await create(endpoint, body, { apiToken: g.apiToken, apiKey: g.apiKey, email: g.email }) as ResourceData;
        const instanceName = (g.name?.toString() ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    get: {
      description: "Get a Address Map",
      arguments: z.object({ id: z.string().describe("The ID of the Address Map") }),
      execute: async (args: { id: string }, context: any) => {
        const g = context.globalArgs;
        const endpoint = "/accounts/" + g.account_id + "/addressing/address_maps";
        const result = await read(endpoint, args.id, { apiToken: g.apiToken, apiKey: g.apiKey, email: g.email }) as ResourceData;
        const instanceName = (g.name?.toString() ?? args.id).replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    lookup: {
      description: "Look up an existing Address Map by matching global argument values and import it into state",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const endpoint = "/accounts/" + g.account_id + "/addressing/address_maps";
        const filters: [string, string][] = [];
        if (g.enabled !== undefined) filters.push(["enabled", String(g.enabled)]);
        if (filters.length === 0) throw new Error("At least one global argument must be set to filter by");
        const items = await listAll(endpoint, "page", undefined, { apiToken: g.apiToken, apiKey: g.apiKey, email: g.email });
        const matches = items.filter(item => {
          for (const [key, val] of filters) {
            if (String((item as Record<string, unknown>)[key]) !== val) return false;
          }
          return true;
        });
        if (matches.length === 0) {
          const filterDesc = filters.map(([k, v]) => \`\${k}=\${JSON.stringify(v)}\`).join(", ");
          throw new Error(\`No address map found matching filters: \${filterDesc}\`);
        }
        if (matches.length > 1) {
          const filterDesc = filters.map(([k, v]) => \`\${k}=\${JSON.stringify(v)}\`).join(", ");
          throw new Error(\`Expected exactly 1 match, found \${matches.length} for filters: \${filterDesc}\`);
        }
        const result = matches[0] as ResourceData;
        const instanceName = (g.name?.toString() ?? result.id?.toString() ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    adopt: {
      description: "Import an existing Address Map by ID into state for management",
      arguments: z.object({ id: z.string().describe("The ID of the Address Map to import") }),
      execute: async (args: { id: string }, context: any) => {
        const g = context.globalArgs;
        const endpoint = "/accounts/" + g.account_id + "/addressing/address_maps";
        const result = await read(endpoint, args.id, { apiToken: g.apiToken, apiKey: g.apiKey, email: g.email }) as ResourceData;
        const instanceName = (result.name?.toString() ?? g.name?.toString() ?? args.id).replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    update: {
      description: "Update Address Map attributes",
      arguments: z.object({ identifier: z.string().describe("Target a specific Address Map by id (e.g. one discovered by list)").optional() }),
      execute: async (args: { identifier?: string }, context: any) => {
        const g = context.globalArgs;
        const endpoint = "/accounts/" + g.account_id + "/addressing/address_maps";
        const instanceName = (g.name?.toString() ?? args.identifier ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const content = await context.dataRepository.getContent(
          context.modelType, context.modelId, instanceName,
        );
        if (!content) throw new Error("No data found - run create, get, or list first");
        const existing = JSON.parse(new TextDecoder().decode(content));
        const body: Record<string, unknown> = {};
        if (g.enabled !== undefined) body.enabled = g.enabled;
        const result = await update(endpoint, existing.id, body, "PATCH", { apiToken: g.apiToken, apiKey: g.apiKey, email: g.email }) as ResourceData;
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    delete: {
      description: "Delete the Address Map",
      arguments: z.object({ id: z.string().describe("The ID of the Address Map") }),
      execute: async (args: { id: string }, context: any) => {
        const g = context.globalArgs;
        const endpoint = "/accounts/" + g.account_id + "/addressing/address_maps";
        const { existed } = await remove(endpoint, args.id, { apiToken: g.apiToken, apiKey: g.apiKey, email: g.email });
        const instanceName = (context.globalArgs.name?.toString() ?? args.id).replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, {
          id: args.id,
          existed,
          status: existed ? "deleted" : "not_found",
          deletedAt: new Date().toISOString(),
        });
        return { dataHandles: [handle] };
      },
    },
    sync: {
      description: "Sync Address Map state from Cloudflare",
      arguments: z.object({ identifier: z.string().describe("Target a specific Address Map by id (e.g. one discovered by list)").optional() }),
      execute: async (args: { identifier?: string }, context: any) => {
        const g = context.globalArgs;
        const endpoint = "/accounts/" + g.account_id + "/addressing/address_maps";
        const instanceName = (g.name?.toString() ?? args.identifier ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const content = await context.dataRepository.getContent(
          context.modelType, context.modelId, instanceName,
        );
        if (!content) throw new Error("No data found - run create, get, or list first");
        const existing = JSON.parse(new TextDecoder().decode(content));
        if (!existing.id) throw new Error("Stored state has no id - cannot sync");
        const result = await tryRead(endpoint, existing.id, { apiToken: g.apiToken, apiKey: g.apiKey, email: g.email }) as ResourceData | null;
        if (result) {
          const handle = await context.writeResource("state", instanceName, result);
          return { dataHandles: [handle] };
        }
        const handle = await context.writeResource("state", instanceName, {
          id: existing.id,
          status: "not_found",
          syncedAt: new Date().toISOString(),
        });
        return { dataHandles: [handle] };
      },
    },
  },
};
'
`;

snapshot[`generateCloudflareExtensionModel - with upgrades block 1`] = `
'// Swamp, an Automation Framework
// Copyright (C) 2026 Elder Swamp Club, Inc.
//
// This file is part of Swamp.
//
// Swamp is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License version 3
// as published by the Free Software Foundation, with the Swamp
// Extension and Definition Exception (found in the "COPYING-EXCEPTION"
// file).
//
// Swamp is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with Swamp.  If not, see <https://www.gnu.org/licenses/>.

// Auto-generated extension model for @swamp/cloudflare/workers/scripts
// Do not edit manually. Re-generate with: deno task generate:cloudflare

// deno-lint-ignore-file no-explicit-any

/**
 * Swamp extension model for a Cloudflare Worker Script.
 *
 * Wraps the Cloudflare API as a swamp model so create, get, lookup,
 * adopt, update, delete, and sync can be driven through \`swamp model\`.
 *
 * @module
 */

import { z } from "npm:zod@4.3.6";
import { create, listAll, read, tryRead, remove } from "./_lib/cloudflare.ts";

const GlobalArgsSchema = z.object({
  account_id: z.string().describe("Cloudflare account ID"),
  name: z.string().describe("Script name").optional(),
  apiToken: z.string().meta({ sensitive: true }).describe("Cloudflare API token; overrides the CLOUDFLARE_API_TOKEN environment variable. Wire with a vault.get(...) expression to source it from a vault.").optional(),
  apiKey: z.string().meta({ sensitive: true }).describe("Cloudflare API key for the legacy key+email auth path; overrides the CLOUDFLARE_API_KEY environment variable. Wire with a vault.get(...) expression. Requires email.").optional(),
  email: z.string().meta({ sensitive: true }).describe("Cloudflare account email for the legacy key+email auth path; overrides the CLOUDFLARE_EMAIL environment variable. Requires apiKey.").optional(),
});

const ResourceSchema = z.object({
  id: z.string(),
  name: z.string().optional(),
  created_on: z.string().optional(),
  modified_on: z.string().optional(),
}).passthrough();

type ResourceData = z.infer<typeof ResourceSchema>;

const InputsSchema = z.object({
  account_id: z.string().optional(),
  name: z.string().optional(),
  apiToken: z.string().meta({ sensitive: true }).optional(),
  apiKey: z.string().meta({ sensitive: true }).optional(),
  email: z.string().meta({ sensitive: true }).optional(),
});

/** Swamp extension model for Cloudflare Worker Script. Registered at \`@swamp/cloudflare/workers/scripts\`. */
export const model = {
  type: "@swamp/cloudflare/workers/scripts",
  version: "2026.01.02.1",
  upgrades: [
    {
      toVersion: "2026.01.02.1",
      description: "Added: metadata field",
      upgradeAttributes: (old: Record<string, unknown>) => old,
    },
  ],
  globalArguments: GlobalArgsSchema,
  inputsSchema: InputsSchema,
  resources: {
    state: {
      description: "Worker Script resource state",
      schema: ResourceSchema,
      lifetime: "infinite",
      garbageCollection: 10,
    },
  },
  methods: {
    create: {
      description: "Create a Worker Script",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const missing = ["name"].filter((k) => g[k] === undefined);
        if (missing.length > 0) throw new Error("create requires global arguments: " + missing.join(", "));
        const endpoint = "/accounts/" + g.account_id + "/workers/scripts";
        const body: Record<string, unknown> = {};
        if (g.name !== undefined) body.name = g.name;
        const result = await create(endpoint, body, { apiToken: g.apiToken, apiKey: g.apiKey, email: g.email }) as ResourceData;
        const instanceName = (g.name?.toString() ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    get: {
      description: "Get a Worker Script",
      arguments: z.object({ id: z.string().describe("The ID of the Worker Script") }),
      execute: async (args: { id: string }, context: any) => {
        const g = context.globalArgs;
        const endpoint = "/accounts/" + g.account_id + "/workers/scripts";
        const result = await read(endpoint, args.id, { apiToken: g.apiToken, apiKey: g.apiKey, email: g.email }) as ResourceData;
        const instanceName = (g.name?.toString() ?? args.id).replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    lookup: {
      description: "Look up an existing Worker Script by matching global argument values and import it into state",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const endpoint = "/accounts/" + g.account_id + "/workers/scripts";
        const filters: [string, string][] = [];
        if (g.name !== undefined) filters.push(["name", String(g.name)]);
        if (filters.length === 0) throw new Error("At least one global argument must be set to filter by");
        const items = await listAll(endpoint, "page", undefined, { apiToken: g.apiToken, apiKey: g.apiKey, email: g.email });
        const matches = items.filter(item => {
          for (const [key, val] of filters) {
            if (String((item as Record<string, unknown>)[key]) !== val) return false;
          }
          return true;
        });
        if (matches.length === 0) {
          const filterDesc = filters.map(([k, v]) => \`\${k}=\${JSON.stringify(v)}\`).join(", ");
          throw new Error(\`No worker script found matching filters: \${filterDesc}\`);
        }
        if (matches.length > 1) {
          const filterDesc = filters.map(([k, v]) => \`\${k}=\${JSON.stringify(v)}\`).join(", ");
          throw new Error(\`Expected exactly 1 match, found \${matches.length} for filters: \${filterDesc}\`);
        }
        const result = matches[0] as ResourceData;
        const instanceName = (g.name?.toString() ?? result.name?.toString() ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    adopt: {
      description: "Import an existing Worker Script by ID into state for management",
      arguments: z.object({ id: z.string().describe("The ID of the Worker Script to import") }),
      execute: async (args: { id: string }, context: any) => {
        const g = context.globalArgs;
        const endpoint = "/accounts/" + g.account_id + "/workers/scripts";
        const result = await read(endpoint, args.id, { apiToken: g.apiToken, apiKey: g.apiKey, email: g.email }) as ResourceData;
        const instanceName = (result.name?.toString() ?? g.name?.toString() ?? args.id).replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    delete: {
      description: "Delete the Worker Script",
      arguments: z.object({ id: z.string().describe("The ID of the Worker Script") }),
      execute: async (args: { id: string }, context: any) => {
        const g = context.globalArgs;
        const endpoint = "/accounts/" + g.account_id + "/workers/scripts";
        const { existed } = await remove(endpoint, args.id, { apiToken: g.apiToken, apiKey: g.apiKey, email: g.email });
        const instanceName = (context.globalArgs.name?.toString() ?? args.id).replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, {
          id: args.id,
          existed,
          status: existed ? "deleted" : "not_found",
          deletedAt: new Date().toISOString(),
        });
        return { dataHandles: [handle] };
      },
    },
    sync: {
      description: "Sync Worker Script state from Cloudflare",
      arguments: z.object({ identifier: z.string().describe("Target a specific Worker Script by name (e.g. one discovered by list)").optional() }),
      execute: async (args: { identifier?: string }, context: any) => {
        const g = context.globalArgs;
        const endpoint = "/accounts/" + g.account_id + "/workers/scripts";
        const instanceName = (g.name?.toString() ?? args.identifier ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const content = await context.dataRepository.getContent(
          context.modelType, context.modelId, instanceName,
        );
        if (!content) throw new Error("No data found - run create, get, or list first");
        const existing = JSON.parse(new TextDecoder().decode(content));
        if (!existing.name) throw new Error("Stored state has no name - cannot sync");
        const result = await tryRead(endpoint, existing.name, { apiToken: g.apiToken, apiKey: g.apiKey, email: g.email }) as ResourceData | null;
        if (result) {
          const handle = await context.writeResource("state", instanceName, result);
          return { dataHandles: [handle] };
        }
        const handle = await context.writeResource("state", instanceName, {
          id: existing.name,
          status: "not_found",
          syncedAt: new Date().toISOString(),
        });
        return { dataHandles: [handle] };
      },
    },
  },
};
'
`;
